[sm] got a flex gap on the items and the sections displaying in the correct axis in the flex parent element

--- a/src/components/DogGame/DogGame.module.css
+++ b/src/components/DogGame/DogGame.module.css
@@ -38,6 +38,16 @@
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.24);
 }
 
+.flexParent {
+    display:flex;
+}
+
+.leftSection, .rightSection {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .rightItem, .leftItem {
     display:block;
     width: 50px;
